refactor: refactor repository business report
