# docs/swagger.json
@@ -831,7 +831,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/entity.ToyImage"
+                            "$ref": "#/definitions/response.APISuccessResponse"
                         }
                     }
                 }
@@ -1576,6 +1576,9 @@
                 },
                 "is_active": {
                     "type": "boolean"
+                },
+                "password": {
+                    "type": "string"
                 },
                 "phone_number": {
                     "type": "string"
